# compose

./: .gitignore  LICENSE.txt  README.rst  compose.py  example.md  pyproject.toml  setup.cfg  setup.py  tests.py  tox.ini
.github/workflows/: python-package.yml
tests/: README.rst  base.py  requirements.txt  runtests.py  test_attrgetter.py  test_common.py  test_compose.py  test_composition.py  test_filter.py  test_helpers.py  test_itemgetter.py  test_map.py  test_partial.py  test_shift.py
