[metadata]
name = Compose
version = attr: compose.__version__
author = Yelnik Vitaliy
author_email = velnik@gmail.com
description = Function Composition in Python
long_description = file: README.rst
license = BSD-3-Clause
project_urls =
    Source = https://github.com/kwist-sgr/compose/


[bdist_wheel]
universal = 1


[options]
python_requires = >=3.7
packages = find:
zip_safe = false


[flake8]
max-line-length = 110
ignore = E203,W504,W601
exclude = .eggs,.git,.tox
