[metadata]
name = Compose
version = attr: compose.__version__
author = Vitaliy Yelnik
author_email = velnik@gmail.com
description = Function Composition in Python
long_description = file: README.rst
classifiers=[
        "Development Status :: 3 - Alpha",
        "Framework :: AsyncIO",
        "Intended Audience :: Developers",
        "Topic :: Functional",
        'License :: OSI Approved :: MIT License',
        "Programming Language :: Python",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
    ]
project_urls =
    Source = https://github.com/kwist-sgr/compose/


[bdist_wheel]
universal = 1


[options]
python_requires = >=3.7
packages = find:
zip_safe = false


[flake8]
max-line-length = 110
ignore = E203,W504,W601
exclude = .eggs,.git,.tox
